# ros2_projects

./: occupancy_maps.md
LIDAR (Laser) Data Processing & Visualization Roadmap/: README.md
LIDAR (Laser) Data Processing & Visualization Roadmap/src/lab1/: CMakeLists.txt  package.xml
LIDAR (Laser) Data Processing & Visualization Roadmap/src/lab1/src/: lidar_ray.cpp
LIDAR (Laser) Data Processing & Visualization Roadmap/src/lab1/worlds/: exp3.sdf
Odometry & Localization — Complete C++  ROS 2 Roadmap/: README.md
lab_1/: README.md
lab_1/src/lab1/config/: lab1.rviz
lab_1/src/lab1/launch/: lab1.launch
lab_1/src/lab1/src/: trajectory.cpp
localization/src/localization_demo/: CMakeLists.txt  README.md  package.xml
localization/src/localization_demo/include/localization_demo/: localization_helpers.hpp
localization/src/localization_demo/launch/: localization_demo.launch.py
localization/src/localization_demo/rviz/: localization_demo.rviz
localization/src/localization_demo/src/: dead_reckoning.cpp  localization_belief.cpp  odometry_reader.cpp  trajectory_logger.cpp
