<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>localization_demo</name>
  <version>1.0.0</version>
  <description>
    BLM4830 Week 6 – Odometry and Localization demonstration.
    Covers: odometry reading, dead reckoning, trajectory logging,
    localization belief visualization, and RViz markers.
  </description>
  <maintainer email="student@yildiz.edu.tr">BLM4830 Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 core -->
  <depend>rclcpp</depend>

  <!-- Message types -->
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>

  <!-- TF2 for quaternion math -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
